--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 click==6.6
-eveapi==1.3.2
-EVEPrest==1.3.1
+EVEPrest==1.3.4
 Flask==0.11.1
 Flask-Login==0.3.2
 Flask-SQLAlchemy==2.1
@@ -11,3 +10,4 @@ MarkupSafe==0.23
 requests==2.10.0
 SQLAlchemy==1.0.14
 Werkzeug==0.11.10
+git+https://github.com/ntt/eveapi
