--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==0.11.1
 Flask-Login==0.3.2
 Flask-SQLAlchemy==2.1
 future==0.15.2
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
