--- a/hr/config.cfg.example
+++ b/hr/config.cfg.example
@@ -1,7 +1,10 @@
 SQLALCHEMY_DATABASE_URI = ''
 SQLALCHEMY_TRACK_MODIFICATIONS = False
 SECRET_KEY = ''
+CORPORATION = ''
+API_KEY_MASK = 0
 
+CONTACT_EMAIL = ''
 EVE_OAUTH_CLIENT_ID = ''
 EVE_OAUTH_SECRET = ''
 EVE_OAUTH_CALLBACK = ''
