Start Reddit OAuth implementation
Add personal settings page

--- a/hr/config.cfg.example
+++ b/hr/config.cfg.example
@@ -8,3 +8,8 @@ CONTACT_EMAIL = ''
 EVE_OAUTH_CLIENT_ID = ''
 EVE_OAUTH_SECRET = ''
 EVE_OAUTH_CALLBACK = ''
+
+REDDIT_OAUTH_CLIENT_ID = ''
+REDDIT_OAUTH_SECRET = ''
+REDDIT_OAUTH_CALLBACK = ''
+REDDIT_OAUTH_SCOPES = ''
