Development towards feature-completion
Added logging
Completed details page
Tweaked CSS
Completed user applications

--- a/hr/config.cfg.example
+++ b/hr/config.cfg.example
@@ -1,6 +1,7 @@
 SQLALCHEMY_DATABASE_URI = ''
 SQLALCHEMY_TRACK_MODIFICATIONS = False
 SECRET_KEY = ''
+LOGGING_LEVEL = 10
 CORPORATION = ''
 API_KEY_MASK = 0
 
