--- a/hr/config.cfg.example
+++ b/hr/config.cfg.example
@@ -4,6 +4,8 @@ SECRET_KEY = ''
 LOGGING_LEVEL = 10
 CORPORATION = ''
 API_KEY_MASK = 0
+CORP_MEMBER_API_KEY = ''
+CORP_MEMBER_API_CODE = ''
 
 CONTACT_EMAIL = ''
 EVE_OAUTH_CLIENT_ID = ''
