--- a/hr/config.cfg.example
+++ b/hr/config.cfg.example
@@ -2,10 +2,13 @@ SQLALCHEMY_DATABASE_URI = ''
 SQLALCHEMY_TRACK_MODIFICATIONS = False
 SECRET_KEY = ''
 LOGGING_LEVEL = 10
+
 CORPORATION = ''
-API_KEY_MASK = 0
-CORP_MEMBER_API_KEY = ''
+API_KEY_MASK = 1
+CORP_MEMBER_API_KEY = 1
 CORP_MEMBER_API_CODE = ''
+
+REST_SECRET = ''
 
 CONTACT_EMAIL = ''
 EVE_OAUTH_CLIENT_ID = ''
@@ -15,4 +18,3 @@ EVE_OAUTH_CALLBACK = ''
 REDDIT_OAUTH_CLIENT_ID = ''
 REDDIT_OAUTH_SECRET = ''
 REDDIT_OAUTH_CALLBACK = ''
-REDDIT_OAUTH_SCOPES = ''
